2011-03-04  Robert Larice
 * src/spicelib/devices/isrc/isrcdefs.h :
    bug fix, isrc polarity inversion
      my commit `vsrc, isrc, cleanup aiming for more similarity' from 2011-02-27
        changed the polarity of the `isrc' current.
      the structure definition somewhere has an `overlay', how *evil* !

2011-03-03 Dietmar Warning
 * diode & bjt temperature model update tlev, tlevc
 * cktsgen.c: segfault fix

2011-02-28  Robert Larice
 * src/spicelib/devices/isrc/isrcacct.c ,
 * src/spicelib/devices/isrc/isrcload.c :
    merge vsrc PULSE -> isrc
      to fix PHASE != 0,  see commit from  2010-11-21

2011-02-28  Robert Larice
 * src/spicelib/devices/isrc/isrc.c ,
 * src/spicelib/devices/isrc/isrcacct.c ,
 * src/spicelib/devices/isrc/isrcask.c ,
 * src/spicelib/devices/isrc/isrcdefs.h ,
 * src/spicelib/devices/isrc/isrcload.c ,
 * src/spicelib/devices/isrc/isrcpar.c ,
 * src/spicelib/devices/vsrc/vsrc.c ,
 * src/spicelib/devices/vsrc/vsrcload.c :
    merge TRRANDOM vsrc -> isrc
      see commit from 11-01-16

2011-02-27  Robert Larice
 * src/spicelib/devices/isrc/* ,
 * src/spicelib/devices/vsrc/* :
    vsrc, isrc, whitespace cleanup

2011-02-27  Robert Larice
 * src/spicelib/devices/isrc/* ,
 * src/spicelib/devices/vsrc/* :
    vsrc, isrc, cleanup aiming for more similarity

2011-02-27  Robert Larice
 * src/spicelib/devices/isrc/isrc.c ,
 * src/spicelib/devices/vsrc/vsrc.c :
    vsrc, isrc, parameter descriptors, synchronize to each other

2011-02-27  Robert Larice
 * src/spicelib/devices/isrc/isrcpar.c ,
 * src/spicelib/devices/vsrc/vsrcpar.c :
    vsrc, isrc, merge checks for length of vector parameters

2011-02-27  Robert Larice
 * src/spicelib/devices/isrc/isrcask.c ,
 * src/spicelib/devices/vsrc/vsrcload.c ,
 * src/spicelib/devices/vsrc/vsrcpar.c :
    bug fix, three of them (vsrc, isrc)

2011-02-22 Dietmar Warning
 * diode & bjt temperature model update, now it is possible to select the